
             • Argument ‘file.XSYG’ replaced by ‘object’,

             • allow input for ‘RLum.Analysis’ object. In such cases
               the arguments ‘file.BINX’ and ‘recordType’ are ignored.
               This mode gives more flexibility in applying this
               function,

             • new argument ‘compatibility.mode’ to trigger the write
               output of the BIN/BINX-file.

         • ‘fit_CWVCurve()’

             • The function broke with an error under rare
               circumstances when not fit was made (reported by
               Alexandra Rowell); corrected,

             • change start parameter estimation to better account for
               the input data, this should hopefully stabilise the
               fitting (thanks to Alexandra Rowell),

             • proper rescaling graphical output if no fit could be
               made,

             • new argument add ‘fit.method’ to allow using the
               function ‘nlsLM’ from the ‘minpack.lm package’ and with
               this the Levenberg-Marquardt algorithm,

             • argument ‘cex.global’ replaced by ‘cex’ and moved to the
               ‘...’ argument,

             • argument ‘output.plot’ changed to ‘plot’,

             • changing the way how warnings are surpressed.

         • ‘plot_Histogram()’

             • Argument 'breaks' was without function due to a coding
               error. Corrected. (#217),

             • argument 'breaks' removed from the argument list,
               however, supported via the ‘'...'’ argument.

         • ‘plot_RLum.Anaysis()’

             • Setting the argument ‘combine = TRUE’ for 'OSL' and
               'IRSL' caused an error related to the missing argument
               'curve.transformation'; corrected.,

             • colour handling for setting ‘combine = TRUE’ improved.
               It now works as for ‘plot.default’.

         • ‘readBIN2R()’
