@@ -47,7 +47,7 @@ The function for the CW-OSL fitting has the general form:
 \deqn{y = I0_{1}*\lambda_{1}*exp(-\lambda_1*x) + ,\ldots,
 + I0_{i}*\lambda_{i}*exp(-\lambda_i*x)
 }
-where \eqn{1 < i < 8}\cr\cr
+where \eqn{0 < i < 8}\cr\cr
 and \eqn{\lambda} is the decay constant and \eqn{N0} the intial number of
 trapped electrons.\cr
 (for the used equation cf. Boetter-Jensen et al., 2003)\cr\cr
@@ -129,4 +129,4 @@ fit <- fit_CWCurve(values = ExampleData.CW_OSL_Curve,
 
 \keyword{dplot}
 \keyword{models}
-\section{Function version}{0.5.0 (2015-04-07 00:27:19)}
+\section{Function version}{0.5.0 (2015-04-07 10:43:19)}
