@@ -30,7 +30,10 @@ Changes in version 0.4.3 (XXth, 2015):
                function,
 
              • new argument ‘compatibility.mode’ to trigger the write
-               output of the BIN/BINX-file.
+               output of the BIN/BINX-file,
+
+             • additionally now the time between the steps is exported
+               ‘TIMESINCELAST.STEP’.
 
          • ‘fit_CWVCurve()’
 
